fixed css on mobile resolution

--- a/src/app/resultpage/resultpage.component.scss
+++ b/src/app/resultpage/resultpage.component.scss
@@ -21,22 +21,11 @@
 
 .landing-title {
 
-  min-height: 5vh;
-  margin-bottom: 2rem;
-
    h1 {
      font-size: 2rem;
     
      color: #FFF;
    }
-}
-
-.input-display {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center; 
-  min-height: 85vh;
 }
 
 .input-container {
@@ -90,7 +79,7 @@
 .news-item {
   display: flex;
   background-color: #202020;
-  padding: 1rem;
+  padding: 1rem 0 1rem 0;
   margin-bottom: 2rem;
   border-radius: 1rem;
 }
@@ -102,29 +91,20 @@
   padding: 2rem;
   border-radius: 1rem;
 }
-@media(max-width: 1200px) {
 
-  .result-container {
-    div {
-        h1 {
-          font-size: 1.1rem
-        }
-        p {
-          font-size: 1rem;
-        }
-  }
-  .news-card {
-    padding: 1rem 0 1rem 0;
-  }
-}
-}
 @media(max-width: 1023px) {
   .result-card {
     width: 700px;
   }
-
+  .news-text{
+    h1 {
+      font-size: 1.1rem
+    }
+    p {
+      font-size: 1rem;
+    }
+  }
 }
-
 
 @media(max-width: 700px) {
   .landing-title {
@@ -138,19 +118,21 @@
   }
   .result-card {
     width: 95%;
+    padding: .75rem;
   }
   .image-container {
     margin-bottom: 1rem;
+
     img {
+      border-radius: 2px;
       width: 100%;
-      height: 300px;
+      height: 100%;
     }
   }
   .news-text {
     padding-left: 0;
   }
   .searchbar-container {
-    padding: 2rem 0 4rem 0;
     div{
       width: 90%;
     }
